[project]
name = "sxzslz-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "werkzeug>=3.1.8",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
